--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="description" content="Carnival LDN - London's Premier Events Company. Experience unforgettable club nights, Bollywood parties, Diwali celebrations, and New Year events." />
     <meta name="keywords" content="events london, club nights, bollywood parties, diwali celebration, new year party, carnival london" />
     <title>Carnival LDN | Unforgettable Events & Parties in London</title>
+    
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GW81WH5WJ0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GW81WH5WJ0');
+    </script>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
